feat: add additional nwc features

--- a/lib/plugins/nwc/Cargo.toml
+++ b/lib/plugins/nwc/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 log = { workspace = true }
 anyhow = { workspace = true }
 sdk-macros = { workspace = true }
+sdk-common = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
 breez-sdk-liquid = { path = "../../core" }
