--- a/packages/flutter_breez_liquid/rust/Cargo.toml
+++ b/packages/flutter_breez_liquid/rust/Cargo.toml
@@ -11,6 +11,7 @@ flutter_rust_bridge = "=2.9.0"
 
 # Replaced with release commit during publishing
 breez-sdk-liquid = { path = "../../../lib/core" }
+breez-sdk-liquid-nwc = { path = "../../../lib/plugins/nwc" }
 sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "5e60ae519b23d618e1ffb3d9899205fb1638d02d", features = ["liquid"] }
 async-trait = "0.1.86"
 
