--- a/lib/plugins/nwc/Cargo.toml
+++ b/lib/plugins/nwc/Cargo.toml
@@ -25,6 +25,7 @@ tokio_with_wasm = { version = "=0.8.2", features = [
     "time",
 ] }
 nostr-sdk = { version = "0.43.0", features = ["nip44", "nip47"] }
+web-time = "1.1.0"
 
 # Non-Wasm dependencies
 [target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
