--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -20,8 +20,8 @@ anyhow = "1.0"
 log = "0.4.20"
 once_cell = "1.19"
 serde = { version = "1.0", features = ["derive"] }
-sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "5e60ae519b23d618e1ffb3d9899205fb1638d02d", features = ["liquid"] }
-sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "5e60ae519b23d618e1ffb3d9899205fb1638d02d" }
+sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "93c38fcd929a2a1ecc67e77b46154c92c2858eb4", features = ["liquid", "nwc"] }
+sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "93c38fcd929a2a1ecc67e77b46154c92c2858eb4" }
 thiserror = "1.0"
 
 [patch.crates-io]
