fix(incomplete): kotlin bindings

--- a/lib/bindings/makefile
+++ b/lib/bindings/makefile
@@ -3,6 +3,9 @@ SOURCES=$(sort $(wildcard ./src/*.rs ./src/**/*.rs))
 SHELL := /bin/bash
 OS_NAME=$(shell uname | tr '[:upper:]' '[:lower:]')
 TARGET ?= aarch64-unknown-linux-gnu
+TARGET_DIR := ../target
+INSTALL_PREFIX := CARGO_TARGET_DIR="$(TARGET_DIR)"
+
 export IPHONEOS_DEPLOYMENT_TARGET := 13.0
 
 .PHONY: init
@@ -35,10 +38,12 @@ test:
 
 all: bindings-swift bindings-android python-darwin
 
+install-uniffi-bindgen-gobley:
+	$(INSTALL_PREFIX) cargo install gobley-uniffi-bindgen --git https://github.com/breez/gobley --rev 72753910f54a157de2f84b78dc6f78415e28d4f2
+
 ## Android 
 .PHONY: android
-android: aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android
-	cargo install gobley-uniffi-bindgen --git https://github.com/breez/gobley --rev f920c275e4f60e22080a6cd280d9562d64eb6ac9
+android: install-uniffi-bindgen-gobley aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android
 	gobley-uniffi-bindgen -c ./uniffi.toml -o ffi/kotlin src/breez_sdk_liquid.udl
 
 aarch64-linux-android: $(SOURCES) ndk-home
@@ -66,13 +71,11 @@ bindings-android: android
 
 ## Kotlin
 .PHONY: kotlin
-kotlin: $(SOURCES)
-	cargo build --release --target $(TARGET)
-	cargo install gobley-uniffi-bindgen --git https://github.com/breez/gobley --rev f920c275e4f60e22080a6cd280d9562d64eb6ac9
+kotlin: install-uniffi-bindgen-gobley $(SOURCES) 
+	cargo build --release
 	gobley-uniffi-bindgen -c ./uniffi.toml -o ffi/kotlin src/breez_sdk_liquid.udl
 
-bindings-kotlin-multiplatform: ios-universal android
-	cargo install gobley-uniffi-bindgen --git https://github.com/breez/gobley --rev f920c275e4f60e22080a6cd280d9562d64eb6ac9
+bindings-kotlin-multiplatform: install-uniffi-bindgen-gobley ios-universal android
 	gobley-uniffi-bindgen -c ./uniffi.kotlin-multiplatform.toml -o ffi/kmp src/breez_sdk_liquid.udl
 
 	mkdir -p langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/androidMain/kotlin/breez_sdk_liquid
