--- a/packages/react-native/makefile
+++ b/packages/react-native/makefile
@@ -2,12 +2,6 @@ UNAME := $(shell uname -s)
 export IPHONEOS_DEPLOYMENT_TARGET := 13.0
 export CARGO_TERM_COLOR := always
 
-.PHONY: init
-init: install-protobuf
-	yarn install
-	npx patch-package
-	make -C ../../lib/bindings init
-
 # Install protobuf compiler based on OS
 install-protobuf:
 ifeq ($(UNAME),Linux)
@@ -17,6 +11,18 @@ else ifeq ($(UNAME), Darwin)
 else
 	echo "Unsupoprted OS. Please install protobuf compiler manually." && exit 1
 endif
+
+.PHONY: init
+init: install-protobuf
+	rustup target add \
+	  aarch64-linux-android \
+	  armv7-linux-androideabi \
+	  i686-linux-android \
+	  x86_64-linux-android
+	rustup target add aarch64-apple-ios aarch64-apple-ios-sim x86_64-apple-ios
+	cargo install cargo-ndk
+	yarn install
+	npx patch-package
 
 react-native:
 	yarn ubrn:build
