--- a/lib/wasm/Cargo.toml
+++ b/lib/wasm/Cargo.toml
@@ -21,7 +21,7 @@ sdk-macros = { workspace = true }
 serde = { workspace = true }
 tokio = { version = "1", default-features = false }
 tsify-next = "0.5.5"
-wasm-bindgen = "0.2.100"
+wasm-bindgen = "=0.2.101"
 wasm-bindgen-futures = "0.4.50"
 web-time = "1.1.0"
 indexed_db_futures = "0.6.1"
@@ -32,7 +32,7 @@ breez-sdk-liquid = { path = "../core", features = ["test-utils"] }
 rand = "0.8"
 getrandom = { version = "0.2", features = ["js"] }
 sdk-common = { workspace = true, features = ["test-utils"] }
-wasm-bindgen-test = "0.3.33"
+wasm-bindgen-test = "=0.3.51"
 uuid = "1.16.0"
 tokio_with_wasm = { version = "0.8.2" }
 
