fix: regtest core tests

--- a/regtest/docker-compose.yml
+++ b/regtest/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: hydrayse/waterfalls:d4ea616df4bec72f7d26ebd13b496757f263b952
     environment:
       - RPC_USER_PASSWORD=regtest:regtest
-    command: waterfalls --network elements-regtest --esplora-url http://esplora:4003/api --use-esplora --listen 0.0.0.0:3102 --add-cors
+    command: --network elements-regtest --esplora-url http://esplora:4003/api --use-esplora --listen 0.0.0.0:3102 --add-cors
     ports:
       - 3102:3102
 
