fix(android): add missing pluginClass declaration for Android plugin
Fixes: MissingPluginException(No implementation found for method listen on channel breez_sdk_liquid_logs)

--- a/packages/flutter_breez_liquid/pubspec.yaml
+++ b/packages/flutter_breez_liquid/pubspec.yaml
@@ -45,6 +45,8 @@ flutter:
   plugin:
     platforms:
       android:
+        package: com.breez.breez_sdk_liquid
+        pluginClass: BreezSDKLiquidPlugin
         ffiPlugin: true
       ios:
         ffiPlugin: true
