--- a/lib/plugins/nwc/Cargo.toml
+++ b/lib/plugins/nwc/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 log = { workspace = true }
 anyhow = { workspace = true }
 sdk-macros = { workspace = true }
+sdk-common = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
 breez-sdk-liquid = { path = "../../core" }
@@ -23,7 +24,8 @@ tokio_with_wasm = { version = "=0.8.2", features = [
     "sync",
     "time",
 ] }
-nostr-sdk = { version = "0.43.0", features = ["nip44", "nip47"] }
+nostr-sdk = { version = "0.43.0", features = ["nip04", "nip44", "nip47"] }
+web-time = "1.1.0"
 
 # Non-Wasm dependencies
 [target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
