--- a/packages/flutter_breez_liquid/rust/Cargo.toml
+++ b/packages/flutter_breez_liquid/rust/Cargo.toml
@@ -11,8 +11,10 @@ flutter_rust_bridge = "=2.9.0"
 
 # Replaced with release commit during publishing
 breez-sdk-liquid = { path = "../../../lib/core" }
-sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "5e60ae519b23d618e1ffb3d9899205fb1638d02d", features = ["liquid"] }
+breez-sdk-liquid-nwc = { path = "../../../lib/plugins/nwc" }
+sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "27452b5fd80be52ef047b3e3acb51dc6779b4a38", features = ["liquid", "nwc"] }
 async-trait = "0.1.86"
+futures = "0.3"
 
 anyhow = { version = "1.0.79", features = ["backtrace"] }
 log = "0.4.20"
