Replace patch file with Node.js script for working directory setup (#1058)

--- a/packages/react-native/makefile
+++ b/packages/react-native/makefile
@@ -27,4 +27,4 @@ init: install-protobuf
 react-native:
 	yarn ubrn:build
 	yarn prepare
-	patch -p3 < patches/working-dir.patch
+	yarn patch-working-dir
