--- a/lib/plugins/nwc/Cargo.toml
+++ b/lib/plugins/nwc/Cargo.toml
@@ -26,6 +26,7 @@ tokio_with_wasm = { version = "=0.8.2", features = [
 ] }
 nostr-sdk = { version = "0.43.0", features = ["nip04", "nip44", "nip47"] }
 web-time = "1.1.0"
+urlencoding = "2.1.3"
 
 # Non-Wasm dependencies
 [target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
