--- a/packages/flutter_breez_liquid/justfile
+++ b/packages/flutter_breez_liquid/justfile
@@ -39,8 +39,7 @@ install-protobuf:
 
 # Install flutter_rust_bridge_codegen dependencies
 frb:
-	# This is locked until plist PR https://github.com/ebarnard/rust-plist/pull/152 is merged/released
-	cargo install cargo-expand --locked
+	cargo install cargo-expand
 	cargo install flutter_rust_bridge_codegen --version 2.11.1
 	dart pub global activate ffigen
 	dart pub global activate ffi
